--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               how they can change our environment into a better <br>
               place to live.
               </h3>
-              <a href="file:///Users/revanth/Downloads/RWAC%20folder/Projeci.html"><h5>See more</h5></a>
+              <a href="rwac/Project.html"><h5>See more</h5></a>
               
             </div>
               <div class="IP">
